change swagger documentation 3
