# api/handler/program_handler.go
@@ -33,7 +33,7 @@ func (p *ProgramHandler) GetProgramsByFaculty(c *gin.Context) {
 // GetUniverProgramsWithFaculty
 // @Summary Получить образовательные программы университета, сгруппированные по факультетам
 // @Description Возвращает список программ, распределенных по факультетам, с возможностью фильтрации по предметам, уровню образования и поисковому запросу
-// @Tags programs
+// @Tags Программы в университете с группировкой
 // @Accept json
 // @Produce json
 // @Param id path string true "ID университета"
@@ -43,7 +43,7 @@ func (p *ProgramHandler) GetProgramsByFaculty(c *gin.Context) {
 // @Success 200 {object} []dto.FacultyProgramTree
 // @Failure 400 {object} errs.AppError "Некорректные параметры запроса"
 // @Failure 500 {object} errs.AppError "Внутренняя ошибка сервера"
-// @Router /api/v1/university/{id}/programs/by-faculty [get]
+// @Router /university/{id}/programs/by-faculty [get]
 func (p *ProgramHandler) GetUniverProgramsWithFaculty(c *gin.Context) {
 	var queryParams dto.ProgramTreeQueryParams
 	if err := c.ShouldBindQuery(&queryParams); err != nil {
@@ -65,7 +65,7 @@ func (p *ProgramHandler) GetUniverProgramsWithFaculty(c *gin.Context) {
 // GetUniverProgramsWithGroup
 // @Summary Получить образовательные программы университета, сгруппированные по направлениям подготовки
 // @Description Возвращает список программ, распределенных по группам направлений подготовки, с возможностью фильтрации по предметам, уровню образования и поисковому запросу
-// @Tags programs
+// @Tags Программы в университете с группировкой
 // @Accept json
 // @Produce json
 // @Param id path string true "ID университета"
@@ -75,7 +75,7 @@ func (p *ProgramHandler) GetUniverProgramsWithFaculty(c *gin.Context) {
 // @Success 200 {object} []dto.GroupProgramTree
 // @Failure 400 {object} errs.AppError "Некорректные параметры запроса"
 // @Failure 500 {object} errs.AppError "Внутренняя ошибка сервера"
-// @Router /api/v1/university/{id}/programs/by-field [get]
+// @Router /university/{id}/programs/by-field [get]
 func (p *ProgramHandler) GetUniverProgramsWithGroup(c *gin.Context) {
 	var queryParams dto.ProgramTreeQueryParams
 	if err := c.ShouldBindQuery(&queryParams); err != nil {
